# pre-walkthrough-report-generator

./: .env.example  .gitignore  ADDRESS_VALIDATION_FIX.md  ATTORNEY_DOCUMENTATION_SUMMARY.md  ATTORNEY_PRESENTATION_GUIDE.md  CHECK_SERPAPI.md  Complete_Professional_Documentation.docx  DEPLOYMENT_TROUBLESHOOTING.md  DEPLOY_INSTRUCTIONS.md  DOCUMENTATION_SUMMARY.md  FILENAME_SANITIZATION_FIX.md  FINAL_Complete_Documentation.docx  FINAL_DELIVERABLES_SUMMARY.md  FINAL_TESTING_SUMMARY.md  HONEST_ASSESSMENT.md  IMPRESSIVE_Professional_Documentation_Attorney_Review.docx  NEIGHBORING_PROJECTS_FEATURE.md  NEIGHBORING_PROJECTS_FIX.md  NEIGHBORING_PROJECTS_PREVIEW.md  NEIGHBORING_PROJECTS_SETUP_GUIDE.md  NEIGHBORING_PROJECTS_SUMMARY.md  PROPERTY_LOOKUP_BUG_FIX.md  PROPERTY_LOOKUP_FIX.md  PROPERTY_LOOKUP_SOLUTION.md  Procfile  Professional_Documentation_Attorney_Review.docx  Professional_Documentation_Enhanced_With_Diagrams.docx  Professional_Documentation_FINAL.docx  Professional_System_Documentation.docx  README.md  RENDER_DEPLOYMENT.md  SECURITY_CLEANUP_SUMMARY.md  Technical_Documentation_With_Flowcharts.docx  UNIT_VALIDATION_FIX.md  VIEW_THE_FEATURE.md  app.py  build.sh  config.json.example  config_manager.py  create_complete_documentation.py  (+29 more)
pre_walkthrough_generator/: Pre-walkthrough_template.docx  documentation.txt  pyproject.toml  requirements.txt
pre_walkthrough_generator/src/: __init__.py  config.py  document_generator.py  function_handler.py  main.py  neighboring_projects.py  nyc_neighborhoods.py  property_api.py  property_research.py  transcript_processor.py  (+1 more)
(+7 files in other folders)
