[project]
name = "pre_walkthrough_generator"
version = "0.1.0"
description = "Dynamic Pre-Walkthrough Report Generator for renovation sales meetings."
authors = [
    {name = "Bhatkram jain", email = "b.jain@hellochapter.com"}
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 